@@ -64,6 +64,7 @@ Template for new versions:
 - `autodump`: can now teleport items loosely stored in buildings (clutter)
 - When launched from the Steam client on Linux, both Dwarf Fortress and DFHack will be shown as "Running". This ensures that DF has proper accounting for Linux player usage.
 - `suspendmanager`: improve performance when there are many active jobs
+- `clean`: protect farm plots when cleaning mud
 
 ## Documentation
 - `overlay-dev-guide`: updated examples and troubleshooting steps
